// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace ContactsApplication1.Models;

public partial class DeviceType
{
    public byte DeviceTypeId { get; set; }

    public string DeviceTypeName { get; set; }

    public string DeviceKind { get; set; }

    public virtual ICollection<Device> Devices { get; set; } = new List<Device>();
}