// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace ContactsApplication1.Models;

public partial class Gender
{
    public byte GenderId { get; set; }

    public string GenderName { get; set; }

    public virtual ICollection<Person> People { get; set; } = new List<Person>();
}