// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace ContactsApplication1.Models;

public partial class Person
{
    public int PersonId { get; set; }

    public string FirstName { get; set; }

    public string LastName { get; set; }

    public string MiddleName { get; set; }

    public DateOnly? DateOfBirth { get; set; }

    public byte? GenderId { get; set; }

    public string Notes { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public byte[] RowVersion { get; set; }

    public virtual Gender Gender { get; set; }

    public virtual ICollection<PersonAddress> PersonAddresses { get; set; } = new List<PersonAddress>();

    public virtual ICollection<PersonDevice> PersonDevices { get; set; } = new List<PersonDevice>();
}