// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace ContactsApplication1.Models;

public partial class PersonAddress
{
    public int PersonAddressId { get; set; }

    public int PersonId { get; set; }

    public int AddressId { get; set; }

    public byte AddressTypeId { get; set; }

    public bool IsPrimary { get; set; }

    public DateOnly? StartDate { get; set; }

    public DateOnly? EndDate { get; set; }

    public DateTime CreatedAt { get; set; }

    public virtual Address Address { get; set; }

    public virtual AddressType AddressType { get; set; }

    public virtual Person Person { get; set; }
}