// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace ContactsApplication1.Models;

public partial class PersonDevice
{
    public int PersonDeviceId { get; set; }

    public int PersonId { get; set; }

    public int DeviceId { get; set; }

    public bool IsPrimary { get; set; }

    public DateOnly? StartDate { get; set; }

    public DateOnly? EndDate { get; set; }

    public DateTime CreatedAt { get; set; }

    public virtual Device Device { get; set; }

    public virtual Person Person { get; set; }
}