// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace ContactsApplication1.Models;

public partial class StateProvince
{
    public short StateProvinceId { get; set; }

    public short CountryId { get; set; }

    public string StateCode { get; set; }

    public string StateName { get; set; }

    public virtual ICollection<Address> Addresses { get; set; } = new List<Address>();

    public virtual Country Country { get; set; }
}